# JRBits

./: .gitignore  CMakeLists.txt  README.md  install_deps.sh
Game/include/Game/: menu.h
Game/src/: Game.cpp
Game/src/_gen/: actors_creator_helper_list.hpp
Game/src/actor_creator_helper/: actor_creator_helper.cpp  actor_creator_helper.hpp  controllers_bindings.hpp
Game/src/camera/: camera_target_controller.cpp  camera_target_controller.hpp
Game/src/controller/: controllers.hpp
TopDownEngine/: CMakeLists.txt
TopDownEngine/configs/: fonts.yaml
TopDownEngine/include/TopDownEngine/: world.hpp
TopDownEngine/include/TopDownEngine/controller/: controller.hpp  null_controller.hpp  player_controller.hpp
TopDownEngine/include/TopDownEngine/core/: basic_object.hpp  core.hpp  loader.hpp  loader_maneger.hpp  object.hpp  tickable.hpp  utils.hpp
TopDownEngine/include/TopDownEngine/core/loaders/: font_loader.hpp  loader.hpp  texture_loader.hpp
TopDownEngine/include/TopDownEngine/core/physics/: vector.hpp
TopDownEngine/include/TopDownEngine/drawable/: camera.hpp  drawable.hpp  drawable_config.hpp  drawable_screen.hpp  drawable_utils.hpp
TopDownEngine/include/TopDownEngine/interface/: button.hpp  interface.hpp  message.hpp
TopDownEngine/include/TopDownEngine/launcher/: launch_config.hpp  launcher.hpp  launcher_config.hpp  level.hpp  level_config.hpp
TopDownEngine/include/TopDownEngine/load_manager/: loader_maneger.hpp
TopDownEngine/include/TopDownEngine/map/: game_tile.hpp  game_tile_creator.hpp  i_tile.hpp  map.hpp  map_templated.hpp
TopDownEngine/include/TopDownEngine/object/: actor.hpp  dynamic_object.hpp  invisible_actor.hpp
TopDownEngine/include/TopDownEngine/utils/: display_logger.hpp  fps_counter.hpp
TopDownEngine/include/TopDownEngine/world/: world.hpp  world_fwd.hpp
TopDownEngine/rsrc/maps/: 3types_tiles.map  wall_small.map
TopDownEngine/rsrc/textures/interface/: textures.yaml
TopDownEngine/scripts/: actor_list_gen.py  generate_interface.py  install_deps.sh  menu_gen_template.cpp.jinja
TopDownEngine/scripts/templates/: actor_creator_helper_list.cpp.jinja
TopDownEngine/src/: world.cpp
TopDownEngine/src/controller/: player_controller.cpp
TopDownEngine/src/core/: core.cpp  loader.cpp  loader_manager.cpp
TopDownEngine/src/core/loaders/: font_loader.cpp  loader.cpp  texture_loader.cpp
TopDownEngine/src/drawable/: camera.cpp  drawable.cpp  drawable_config.cpp  drawable_screen.cpp  drawable_utils.cpp
TopDownEngine/src/interface/: interface.cpp  message.cpp
TopDownEngine/src/launcher/: launcher.cpp  launcher_config.cpp  level.cpp  level_config.cpp
TopDownEngine/src/map/: game_tile.cpp  game_tile_creator.cpp  map.cpp  map_templated.cpp
TopDownEngine/src/object/: actor.cpp  dynamic_object.cpp
TopDownEngine/src/physics/: vector.cpp
TopDownEngine/src/utils/: display_logger.cpp
TopDownEngine/tests/: CMakeLists.txt  tests_empty.cpp
TopDownEngine/tests/interface/: message.cpp  message_interface.hpp
TopDownEngine/tests/maps/: tests_map_loading.cpp  tests_pathfinding.cpp
TopDownEngine/tests/view_and_moving/: collision_blocks_moving.cpp  display.cpp  player_actor_moving.cpp
configs/: actors_cfg.yaml  game_tiles.yaml  launcher.config.yaml  level0.config.yaml
include/TopDownEngine/: Core.h  Drawable.hpp  Map.h  core.hpp  map.hpp  world.hpp
include/TopDownEngine/controller/: controller.h  controller.hpp  controller_player.hpp  null_controller.hpp  player_controller.hpp
include/TopDownEngine/core/: core.hpp  loader.hpp  tickable.hpp  types.hpp
include/TopDownEngine/drawable/: camera.hpp  drawable.hpp  drawable_config.hpp
include/TopDownEngine/interface/: interface.hpp
include/TopDownEngine/launcher/: launch_config.hpp  launcher.hpp
include/TopDownEngine/map/: game_tile.h  game_tile.hpp  i_tile.h  i_tile.hpp  map.hpp
include/TopDownEngine/object/: actor.h  actor.hpp  dynamic_object.h  dynamic_object.hpp
include/TopDownEngine/physics/: vector.hpp
include/TopDownEngine/utils/: display_logger.hpp  fps_counter.h  fps_counter.hpp
rsrc/maps/: default.map  full_big.map  river_small.map
rsrc/menu/configs/: main_menu.yaml
rsrc/textures/actors/: textures.yaml
rsrc/textures/tiles/: textures.yaml
src/: Core.cpp  Drawable.cpp  Map.cpp  core.cpp  map.cpp  world.cpp
src/controller/: controller.cpp  controller_player.cpp  player_controller.cpp
src/core/: core.cpp
src/drawable/: camera.cpp  drawable.cpp
src/launcher/: launcher.cpp
src/map/: game_tile.cpp  i_tile.cpp
src/object/: actor.cpp  dynamic_object.cpp
src/physics/: vector.cpp
src/utils/: display_logger.cpp
tests/: CMakeLists.txt  tests_empty.cpp
tests/maps/: tests_map_loading.cpp  tests_pathfinding.cpp
tests/maps/map_resources/: box_small.map  full_big.map  full_small.map
tests/view_and_moving/: collision_blocks_moving.cpp  display.cpp  player_actor_moving.cpp
